Clusterização dos marcadores.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,5 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,10 +9,6 @@
         android:layout_height="match_parent"
         android:id="@+id/map"
         tools:context="br.com.riotour.activity.MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        map:uiZoomControls="true"
-        map:cameraTargetLat="-22.9068467"
-        map:cameraTargetLng="-43.1728965"
-        map:cameraZoom="13"/>
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </RelativeLayout>
