--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -38,11 +38,12 @@
 
         <TextView
             android:id="@+id/nome_lugar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:gravity="center"
             android:layout_below="@id/icone_lugar"
+            android:layout_centerHorizontal="true"
             android:textStyle="bold" />
 
         <ImageView
@@ -50,7 +51,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_below="@id/icone_lugar"
-            android:layout_toLeftOf="@id/nome_lugar"
+            android:layout_toRightOf="@id/nome_lugar"
             android:layout_marginRight="5dp"
             android:src="@drawable/info" />
 
