--- a/app/src/main/res/layout/fragment_detalhe_monumento.xml
+++ b/app/src/main/res/layout/fragment_detalhe_monumento.xml
@@ -5,6 +5,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/campo_foto_monumento"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center_horizontal"
+        tools:src="@drawable/monumento" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -16,21 +23,6 @@
         <TextView
             android:id="@+id/campo_historico"
             tools:text="Esculpido em 1900"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="URL foto:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/campo_url_foto"
-            tools:text="http://url/foto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
