--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -88,9 +88,18 @@
             android:text="Categoria:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <RatingBar
+            android:id="@+id/campo_categoria_rating"
+            style="?android:attr/ratingBarStyleSmall"
+            android:isIndicator="true"
+            android:numStars="5"
+            tools:rating="4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/campo_categoria"
-            tools:text="5"
+            android:id="@+id/campo_categoria_texto"
+            android:visibility="gone"
+            tools:text="Flat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
