--- a/app/src/main/res/menu/menu_map.xml
+++ b/app/src/main/res/menu/menu_map.xml
@@ -4,5 +4,5 @@
         android:title="teste"
         android:orderInCategory="10"
         riotour:showAsAction="always"
-        android:icon="@android:drawable/ic_search_category_default" />
+        android:icon="@android:drawable/ic_menu_search" />
 </menu>
