Alteração na apresentação do endereço na activity de detalhe e pequenas correções nos outros fontes

--- a/app/src/main/res/menu/menu_map.xml
+++ b/app/src/main/res/menu/menu_map.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:riotour="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_search"
-        android:title="teste"
+        android:title="Pesquisa"
         android:orderInCategory="10"
         riotour:showAsAction="always"
         android:icon="@android:drawable/ic_menu_search" />
