--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -10,42 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Logradouro:"
+            android:text="Endereço:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/campo_logradouro"
-            tools:text="Nome da rua"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="Número:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/campo_numero"
-            tools:text="99"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="Bairro:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/campo_bairro"
-            tools:text="Centro"
+            android:id="@+id/campo_endereco"
+            tools:text="Endereço"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
