--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:riotour="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,17 +12,19 @@
         tools:context="br.com.riotour.activity.maps.MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
-    <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <com.getbase.floatingactionbutton.FloatingActionButton
         android:id="@+id/getCurrentLocation"
         android:layout_alignParentRight="true"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="25dp"
-        android:background="@android:color/transparent"
-        android:src="@android:drawable/ic_menu_mylocation"
-        android:contentDescription="Obter localização atual"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        riotour:fab_icon="@android:drawable/ic_menu_mylocation"
+        riotour:fab_colorNormal="#64B5F6"
+        riotour:fab_colorPressed="#2196F3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
     <RelativeLayout
         android:id="@+id/detalhe"
         android:layout_width="match_parent"
