--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,6 @@
     <color name="light_blue">#64B5F6</color>
     <color name="blue">#2196F3</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#fd000000</color>
+    <color name="dark_gray">#212121</color>
 </resources>
