--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
-        <item name="android:actionBarStyle"   tools:ignore="NewApi">@style/MyActionBar</item>
-        <item name="actionBarStyle">@style/MyActionBar</item>
-        <item name="android:actionMenuTextColor">@color/white</item>
+    <style name="AppTheme" parent="AppTheme.Base">
     </style>
-
-    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
-        <item name="android:background"  tools:ignore="NewApi">@color/blue</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorPrimaryInverse">@color/white</item>
-        <item name="background">@color/blue</item>
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">@color/light_blue</item>
         <item name="colorPrimaryDark">@color/blue</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColor">@color/dark_gray</item>
+
     </style>
+
+
 
 </resources>
