Ajuste de layout nas telas de detalhe.

--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:layout_marginLeft="10dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Endereço:"
+            android:text="@string/campo_endereco"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -22,10 +24,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Fax:"
+            android:text="@string/campo_fax"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -37,10 +40,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="E-mail:"
+            android:text="@string/campo_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -52,10 +56,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Categoria:"
+            android:text="@string/campo_categoria"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <RatingBar
@@ -75,11 +80,12 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Qtd. acomodações cadeirantes:"
+            android:text="@string/campo_qtd_acomodacoes_cadeirantes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -91,10 +97,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Qtd. acomodações cão guia:"
+            android:text="@string/campo_qtd_acomodacoes_cao_guia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -106,10 +113,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Telefone para surdos:"
+            android:text="@string/campo_telefone_para_surdos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -121,10 +129,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Telefone:"
+            android:text="@string/campo_telefone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -136,10 +145,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="CNPJ:"
+            android:text="@string/campo_cnpj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -151,10 +161,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Idiomas falados:"
+            android:text="@string/campo_idiomas_falados"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
