--- a/app/src/main/res/layout/fragment_detalhe_museu.xml
+++ b/app/src/main/res/layout/fragment_detalhe_museu.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:layout_marginLeft="10dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Endereço:"
+            android:text="@string/campo_endereco"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -22,10 +24,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Telefone:"
+            android:text="@string/campo_telefone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
