--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -1,16 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.riotour.activity.detalhe.DetalheActivity">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,14 +19,16 @@
 
             <ImageView
                 android:id="@+id/icone_lugar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
                 android:layout_alignTop="@id/nome_lugar"
                 android:layout_toLeftOf="@id/nome_lugar"
+                android:layout_marginRight="10dp"
                 tools:src="@drawable/monumento" />
 
             <ImageView
                 android:id="@+id/mapa_lugar"
+                android:layout_marginTop="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_below="@+id/nome_lugar"
@@ -46,6 +40,4 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </RelativeLayout>
-    </ScrollView>
-
-</RelativeLayout>
+</ScrollView>
