--- a/app/src/main/res/menu/menu_pesquisas_recentes.xml
+++ b/app/src/main/res/menu/menu_pesquisas_recentes.xml
@@ -1,7 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.com.riotour.activity.pesquisa.PesquisasRecentesActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:riotour="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menu_clear"
+        android:title="Limpar"
+        android:orderInCategory="10"
+        riotour:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_delete" />
 </menu>
